--- a/gallery.html
+++ b/gallery.html
@@ -41,15 +41,15 @@
 		</div>
 		<div class="profile-box">
 			<p> GUILLEMARD BRIDGE</p>
-			<img src="images/F4.jpeg">
+			<img src="images/f4.jpeg">
 		</div>
 		<div class="profile-box">
 			<p> GUILLEMARD BRIDGE</p>
-			<img src="images/F3.jpeg">
+			<img src="images/f3.jpeg">
 		</div>
 		<div class="profile-box">
 			<p> MY FRIEND WEDDING</p>
-			<img src="images/F5.jpeg">
+			<img src="images/f5.jpeg">
 	</div>
 </body>
 </html>
